--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.1",
     "husky": "^4.3.0",
+    "json-loader": "^0.5.7",
     "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2"
