--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-scripts": "^3.4.4",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
@@ -35,13 +35,13 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.1",
+    "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "json-loader": "^0.5.7",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "^10.4.2",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2"
   },
